service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: internaltableau
  name: internaltableau
spec:
  ports:
  - name: https
    port: 10443
    targetPort: https
  selector:
    name: internaltableau
