network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internaltableau
spec:
  podSelector:
    matchLabels:
      name: internaltableau
  ingress:
    - ports:
      - protocol: TCP
        port: 10443
